removed scandics from html comments

--- a/resources/private/ui-components/docgen/huoneistot-table/docgen-huoneistot-table-template.html
+++ b/resources/private/ui-components/docgen/huoneistot-table/docgen-huoneistot-table-template.html
@@ -122,7 +122,7 @@
                 </span>
               </td>
 
-              <!--Keittiön tyyppi-->
+              <!--Keittion tyyppi-->
               <td>
                 <span class="form-entry form-input">
                   <div class="inline">
@@ -215,7 +215,7 @@
                 </div>
               </td>
 
-              <!--Lämmin vesi-->
+              <!--Lammin vesi-->
               <td>
                 <div class="checkbox-wrapper">
                   <input type="checkbox"
