--- a/resources/private/admin/companies.html
+++ b/resources/private/admin/companies.html
@@ -15,6 +15,7 @@
               <th>P&auml;&auml;k&auml;ytt&auml;j&auml;t</th>
               <th>Tilityyppi</th>
               <th>K&auml;ytt&auml;j&auml;m&auml;r&auml;</th>
+              <th>Luotu</th>
               <th>Toiminnot</th>
             </tr>
           </thead>
@@ -33,6 +34,7 @@
               </td>
               <td data-bind="text: loc('register.company.' + company.accountType + '.title')"></td>
               <td data-bind="text: company.userLimit"></td>
+              <td data-bind="dateTimeString: company.created"></td>
               <td><a data-bind="click: company.openDialog" data-test-id="company-edit">Muokkaa</a></td>
             </tr>
           </tbody>
