--- a/resources/private/admin/companies.html
+++ b/resources/private/admin/companies.html
@@ -14,7 +14,7 @@
               <th>Osoite</th>
               <th>P&auml;&auml;k&auml;ytt&auml;j&auml;t</th>
               <th>Tilityyppi</th>
-              <th>K&auml;ytt&auml;j&auml;m&auml;r&auml;</th>
+              <th>K&auml;ytt&auml;j&auml;raja</th>
               <th>Luotu</th>
               <th>Toiminnot</th>
             </tr>
