to html entities

--- a/resources/private/admin/companies.html
+++ b/resources/private/admin/companies.html
@@ -15,7 +15,7 @@
               <th>P&auml;&auml;k&auml;ytt&auml;j&auml;t</th>
               <th>Tilityyppi</th>
               <th>K&auml;ytt&auml;j&auml;raja</th>
-              <th>Välittäjätunnus</th>
+              <th>V&auml;litt&auml;j&auml;tunnus</th>
               <th>OVT</th>
               <th>Viite</th>
               <th>Sopimus</th>
