--- a/resources/private/authority-admin/calendar-admin.html
+++ b/resources/private/authority-admin/calendar-admin.html
@@ -8,7 +8,7 @@
         <i class="lupicon-chevron-start"></i>
         <span data-bind="ltext: 'back'"></span>
       </button>
-      <h2 data-bind="ltext: 'auth-admin.resources-admin'"></h2>
+      <h2 data-bind="ltext: 'auth-admin.organization-calendars'"></h2>
     </div>
     <div class="calendar-table"></div>
   </div>
@@ -18,7 +18,7 @@
 
   <div id="dialog-new-slot" class="window autosized">
     <div class="dialog-header">
-      <p data-bind="ltext: 'auth-admin.resource.calendar.create-slot'"></p>
+      <p data-bind="ltext: 'auth-admin.calendar.create-slot'"></p>
       <p class="dialog-close close lupicon-remove"></p>
     </div>
     <div class="dialog-content">
@@ -35,7 +35,7 @@
 
   <div id="dialog-edit-slot" class="window autosized">
     <div class="dialog-header">
-      <p data-bind="ltext: 'auth-admin.resource.calendar.edit-slot'"></p>
+      <p data-bind="ltext: 'auth-admin.calendar.edit-slot'"></p>
       <p class="dialog-close close lupicon-remove"></p>
     </div>
     <div class="dialog-content">
