--- a/resources/private/authority-admin/index.html
+++ b/resources/private/authority-admin/index.html
@@ -16,7 +16,7 @@
                     <li><a class="link-btn" href="#!/backends" data-test-id="" data-bind="ltext: 'auth-admin.backends', css: {'selected': lupapisteApp.models.rootVMO.isCurrentPage('backends')}"></a></li>
                     <li><a class="link-btn" href="#!/areas" data-test-id="" data-bind="ltext: 'auth-admin.areas', css: {'selected': lupapisteApp.models.rootVMO.isCurrentPage('areas')}"></a></li>
                     <li data-bind="if: features.enabled('ajanvaraus')">
-                      <a class="link-btn" href="#!/resources-admin" data-test-id="" data-bind="ltext: 'auth-admin.resources-admin', css: {'selected': lupapisteApp.models.rootVMO.isCurrentPage('resources-admin')}"></a>
+                      <a class="link-btn" href="#!/organization-calendars" data-test-id="" data-bind="ltext: 'auth-admin.organization-calendars', css: {'selected': lupapisteApp.models.rootVMO.isCurrentPage('organization-calendars')}"></a>
                     </li>
                 </ul>
             </div>
