--- a/resources/private/authority-admin/organization-calendars.html
+++ b/resources/private/authority-admin/organization-calendars.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <body>
-<section class="page" id="resources-admin" >
+<section class="page" id="organization-calendars" >
   <div class="container">
     <section>
-      <h2 data-bind="ltext: 'auth-admin.resources-admin.calendars.title'"></h2>
+      <h2 data-bind="ltext: 'auth-admin.organization-calendars.calendars.title'"></h2>
 
-      <table data-test-id="resources-admin-user-calendars-table">
+      <table data-test-id="organization-calendars-user-calendars-table">
         <thead>
         <tr>
-          <th data-bind="ltext: 'auth-admin.resource.calendar.name'"></th>
-          <th data-bind="ltext: 'auth-admin.resource.calendar.inuse'"></th>
+          <th data-bind="ltext: 'auth-admin.calendar.name'"></th>
+          <th data-bind="ltext: 'auth-admin.calendar.inuse'"></th>
         </tr>
         </thead>
         <tbody data-bind="foreach: calendars.items">
