--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -73,7 +73,7 @@
                               <!-- /ko -->
 
                               <!-- Operations: -->
-                              <!-- ko if: $root.permitSubtypes().length == 0  && operationsCount() && operationsCount().length > 0 -->
+                              <!-- ko if: permitSubtypes().length == 0  && operationsCount() && operationsCount().length > 0 -->
                               <div>
                                 <p data-bind="ltext: 'application.operations.secondary'"></p>
                                 <!-- ko if: operationsCount() && operationsCount().length > 0 -->
@@ -94,13 +94,14 @@
                               <!-- /ko -->
 
                               <!-- Subtypes: -->
-                              <!-- ko if: $root.permitSubtypes().length > 0 -->
+                              <!-- ko if: permitSubtypes().length > 0 -->
                               <div>
-                                <p><span data-bind="ltext: 'application.permitSubtypes'"></span>:*</p>
+                                <p class="form-label" data-bind="text: loc('application.permitSubtypes') + ':', css: {tip:permitSubtypeMandatory}"></p>
                                 <span class="application_summary_text">
                                   <select class="dropdown"
-                                          data-bind="options: $root.permitSubtypes, value: $root.application.permitSubtype,
+                                          data-bind="options: permitSubtypes, value: permitSubtype,
                                                      enable: $root.authorization.ok('change-permit-sub-type'),
+                                                     css: {mandatory: permitSubtypeMandatory},
                                                      optionsText: function(item) {return item ? loc('permitSubtype.' + item) : loc('choose'); }"
                                           id="permitSubtypeSelect">
                                   </select>
