--- a/resources/private/ui-components/change-state/change-state-template.html
+++ b/resources/private/ui-components/change-state/change-state-template.html
@@ -3,10 +3,11 @@
         id="change-state-template">
   <p class="no-wrap-whitespace"
      data-bind="ltext: 'state.application'"></p>
+  <span class="application_summary_text">
   <select class="dropdown dropdown--full-width"
           data-test-id="change-state-select"
           data-bind="options: states,
                      optionsText: stateText,
                      value: selectedState,
-                     optionsCaption: loc( 'choose')"></select>
+                     optionsCaption: loc( 'choose')"></select></span>
 </script>
