fixed unwanted foreman task linking on initialization

--- a/resources/private/application/foreman-template.html
+++ b/resources/private/application/foreman-template.html
@@ -62,6 +62,7 @@
                             optionsText: 'displayName',
                             optionsValue: 'id',
                             optionsCaption: loc('choose'),
+                            valueAllowUnset: true,
                             value: $data.selectedForeman">
               </select>
 
