disable inputs while update-foreman-other-applications is running
repository.load in success handler will reset situation with new docgen render

--- a/resources/private/ui-components/foreman-other-applications/foreman-other-applications-template.html
+++ b/resources/private/ui-components/foreman-other-applications/foreman-other-applications-template.html
@@ -47,6 +47,7 @@
               <td><span class="form-entry form-input"
                         data-bind="component: { name: uicomponent,
                                                 params: { schema: $data,
+                                                          isDisabled: $component.disableWhileUpdating(),
                                                           path: $parent.path.concat(name),
                                                           i18npath: i18npath,
                                                           applicationId: applicationId,
