update changes into date input when value is parsed

--- a/resources/private/ui-components/docgen/date/docgen-date-template.html
+++ b/resources/private/ui-components/docgen/date/docgen-date-template.html
@@ -10,6 +10,7 @@
   <span>
     <input type="text"
            data-bind="datepicker: datepickerValue,
+                      value: value,
                       datepickerOptions: datepickerOptions,
                       css: inputClasses,
                       event: events,
