--- a/resources/private/authority-admin/organization-calendars.html
+++ b/resources/private/authority-admin/organization-calendars.html
@@ -37,11 +37,11 @@
     </section>
 
     <section>
-      <h2 data-bind="text: 'Organisaation ajanvaraustyypit'"></h2>
+      <h2 data-bind="ltext: 'auth-admin.organization.reservation-types'"></h2>
       <table data-test-id="organization-reservation-types">
         <thead>
         <tr>
-          <th data-bind="text: 'Ajanvaraustyyppi'"></th>
+          <th data-bind="ltext: 'auth-admin.organization.reservation-type'"></th>
           <th data-bind="ltext: 'auth-admin.actions'"></th>
         </tr>
         </thead>
@@ -52,7 +52,7 @@
         </tr>
         </tbody>
       </table>
-      <a href="#" data-bind="click: reservationTypes.openNewReservationTypeDialog, text: 'auth-admin.calendar.add-reservation-type'"
+      <a href="#" data-bind="click: reservationTypes.openNewReservationTypeDialog, ltext: 'auth-admin.organization.add-reservation-type'"
       data-test-id="add-reservation-type" class="modal btn btn-primary"></a>
     </section>
 
@@ -62,12 +62,13 @@
 
   <div id="dialog-new-reservation-type" class="window autosized">
     <div class="dialog-header">
-      <p data-bind="text: 'auth-admin.calendar.add-reservation-type'"></p>
+      <p data-bind="ltext: 'auth-admin.organization.add-reservation-type'"></p>
       <p class="dialog-close close lupicon-remove"></p>
     </div>
     <div class="dialog-content">
       <div data-bind="with: reservationTypes.newReservationTypeModel">
-        <p>Ajanvaraustyypin nimi: <input type="text" data-bind="value: name"/></p>
+        <p data-bind="ltext: 'auth-admin.organization.reservation-type.name'"></p>
+        <input type="text" data-bind="textInput: name" class="form-input text long" autofocus="autofocus"/>
         <button data-bind="click: execute, ltext: 'save'" class="btn btn-primary btn-dialog close"></button>
       </div>
     </div>
