--- a/resources/private/application/foreman-template.html
+++ b/resources/private/application/foreman-template.html
@@ -1,6 +1,12 @@
 <script class="ko-template" type="text/x-jquery-tmpl" id="application-foreman-template">
   <div>
-    <p data-bind="lhtml: 'help.AddForeman'"></p>
+    <div class="foreman-info" data-bind="lhtml: 'help.AddForeman'"></div>
+    <div class="foreman-info" data-bind="visible: lupapisteApp.models.applicationAuthModel.ok('create-foreman-application'),
+                                         lhtml: 'help.AddForeman.buttonInfo'"
+         data-test-id="invite-foreman-button-info"></div>
+    <div class="foreman-info" data-bind="visible: !lupapisteApp.models.applicationAuthModel.ok('create-foreman-application'),
+                                         lhtml: 'help.AddForeman.authorityInfo'"
+         data-test-id="invite-foreman-authority-info"></div>
     <ul class="invited-foremans" data-bind="foreach: foremanApplications" data-test-id="invited-foremans">
       <li class="foreman">
         <span class="foreman-role" data-bind="text: $data.displayRole"></span>
@@ -12,7 +18,7 @@
         <span class="foreman-state" data-bind="ltext: $data.state"></span>
       </li>
     </ul>
-    <button class="positive margins-s" data-bind="enable: lupapisteApp.models.applicationAuthModel.ok('create-foreman-application'), click: $data.inviteForeman, ltext: 'application.parties.addForeman'" data-test-id="invite-foreman-button"></button>
+    <button class="positive margins-s" data-bind="visible: lupapisteApp.models.applicationAuthModel.ok('create-foreman-application'), click: $data.inviteForeman, ltext: 'application.parties.addForeman'" data-test-id="invite-foreman-button"></button>
   </div>
 </script>
 
