--- a/resources/dev-pages/idf.html
+++ b/resources/dev-pages/idf.html
@@ -3,7 +3,7 @@
 <head>
  <title>Identity federation test form</title>
  <script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
- <script src="//crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha256.js"></script>
+ <script src="https://raw.githubusercontent.com/sytelus/CryptoJS/master/rollups/sha256.js"></script>
  <style>
  input {background-color:white;width:250px;margin:5px;border:1px solid black}
  input[readonly] {
