--- a/resources/private/authority-admin/organization-calendars.html
+++ b/resources/private/authority-admin/organization-calendars.html
@@ -66,10 +66,10 @@
       <p class="dialog-close close lupicon-remove"></p>
     </div>
     <div class="dialog-content">
-      <div data-bind="with: reservationTypes.newReservationTypeModel">
+      <div>
         <p data-bind="ltext: 'auth-admin.organization.reservation-type.name'"></p>
-        <input type="text" data-bind="textInput: name" class="form-input text long" autofocus="autofocus"/>
-        <button data-bind="click: execute, ltext: 'save'" class="btn btn-primary btn-dialog close"></button>
+        <input type="text" data-bind="textInput: reservationTypes.newReservationType" class="form-input text long" autofocus="autofocus"/>
+        <button data-bind="click: reservationTypes.addReservationType, ltext: 'save'" class="btn btn-primary btn-dialog close"></button>
       </div>
     </div>
   </div>
