--- a/resources/private/calendar-view/calendar-view.html
+++ b/resources/private/calendar-view/calendar-view.html
@@ -11,19 +11,38 @@
 
     <div class="weekview-table">
       <h3 data-bind="with: calendar"><!--ko text: name --><!--/ko--> (<!--ko text: organization --><!--/ko-->) </h3>
+      <div>&nbsp;</div>
+      <div class="nav-actions">
+        <div class="month" data-bind="calendarViewMonthText: month()"></div>
+        <div class="nav-links">
+          <a data-bind="click: gotoPreviousWeek"><< Edellinen</a> |
+          <a data-bind="click: gotoToday">Tänään</a> |
+          <a data-bind="click: gotoFollowingWeek">Seuraava >></a>
+        </div>
+      </div>
       <table>
         <thead>
-        <tr data-bind="foreach: calendarWeekdays">
-          <th data-bind="text: str"></th>
+        <tr>
+          <th>&nbsp;</th>
+          <!-- ko foreach: calendarWeekdays -->
+          <th data-bind="calendarDayColumnHeader: startOfDay,
+                         css: {'date-today': today == true}"></th>
+          <!-- /ko -->
         </tr>
         </thead>
         <tbody>
-        <tr data-bind="foreach: calendarWeekdays">
-          <td>
+        <tr>
+          <td data-bind="foreach: timelineTimes">
+            <div class="timestamp">
+              <!--ko text: viewText --><!--/ko-->
+            </div>
+          </td>
+          <!-- ko foreach: calendarWeekdays -->
+          <td data-bind="css: {'date-today': today == true, 'date': today == false}">
             <div style="position: relative;">
               <!-- ko foreach: $root.timelineTimes -->
               <div class="timeline-slot" data-bind="click: $root.clickHandler.bind({ slot: $data, calendarWeekday: $parent }, 'timeline-slot')">
-                <!--ko text: viewText --><!--/ko-->
+                &nbsp;
               </div>
               <!-- /ko -->
               <!-- ko foreach: slots -->
@@ -33,6 +52,7 @@
               <!-- /ko -->
             </div>
           </td>
+          <!-- /ko -->
         </tr>
         </tbody>
       </table>
