--- a/resources/private/company/company.html
+++ b/resources/private/company/company.html
@@ -3,7 +3,14 @@
 <body>
   <section class="page container" id="company">
 
-    <div id="company-content" data-bind="if: lupapisteApp.models.rootVMO.currentPage() === 'company'">
+    <div id="company-content" data-bind="if: lupapisteApp.models.rootVMO.currentPage() === 'company'" class="accordion-container">
+      <div class="inner-margins">
+        <button class="secondary" data-bind="click: function() { history.go(-1); }">
+          <i class="lupicon-chevron-start"></i>
+          <span data-bind="ltext: 'back'"></span>
+        </button>
+      </div>
+      <div class="hr"></div>
       <div class="header">
         <h1 data-bind="text: info.model().name"></h1>
       </div>
@@ -28,7 +35,7 @@
             <div class="form-entry account-type-selector">
               <label class="form-label" for="account-type" data-bind="ltext: 'register.company.form.accountType'"></label>
 
-            <!-- ko ifnot: model().customAccountLimit -->
+              <!-- ko ifnot: model().customAccountLimit -->
               <select name="account-type"
                       class="form-input combobox"
                       data-test-id="company-account-select"
@@ -39,13 +46,13 @@
                                  optionsAfterRender: setAccountTypeOptionDisable,
                                  enable: edit,
                                  valueAllowUnset: true"></select>
-            <!-- /ko -->
-            <!-- ko if: model().customAccountLimit -->
-            <div>
-              <span data-test-id="company-custom-account" data-bind="text: loc('register.company.' + model().accountType() + '.title')"></span>
-              <span data-test-id="company-custom-account-limit" data-bind="text: '(' + loc('company.custom.limit', model().customAccountLimit()) + ')'">
-            </div>
-            <!-- /ko -->
+              <!-- /ko -->
+              <!-- ko if: model().customAccountLimit -->
+              <div>
+                <span data-test-id="company-custom-account" data-bind="text: loc('register.company.' + model().accountType() + '.title')"></span>
+                <span data-test-id="company-custom-account-limit" data-bind="text: '(' + loc('company.custom.limit', model().customAccountLimit()) + ')'"></span>
+              </div>
+              <!-- /ko -->
             </div>
             <div class="form-entry">
               <label class="form-label tip" data-bind="ltext: 'register.company.form.companyName'"></label>
@@ -141,6 +148,7 @@
                     <a href="#" data-bind="click: deleteInvitation, ltext: 'company.user.op.delete.invitation'"></a>
                   </div>
                 </td>
+              </tr>
             </tbody>
             <tbody data-bind="foreach: users">
               <tr data-bind="attr: {'data-test-id': 'company-user-' + email}">
@@ -209,7 +217,7 @@
         <p class="dialog-close close lupicon-remove"></p>
       </div>
       <div class="dialog-content">
-         <form>
+        <form>
           <label data-bind="ltext: 'company.user.email'" class="form-label tip"></label>
           <input data-bind="textInput: email, enable: emailEnabled" class="form-input" type="text" data-test-id="company-new-user-email"/>
 
@@ -224,8 +232,8 @@
 
         <div data-bind="visible: showUserInCompany">
           <span data-bind="ltext: 'register.company.add-user.already-in'"></span>
-            <button data-bind="ltext: 'ok'" class="secondary btn-dialog close" data-test-id="company-add-user-already-in-close"></button>
-          </div>
+          <button data-bind="ltext: 'ok'" class="secondary btn-dialog close" data-test-id="company-add-user-already-in-close"></button>
+        </div>
 
         <div data-bind="visible: showUserAlreadyInvited">
           <span data-bind="ltext: 'register.company.add-user.already-invited'"></span>
