--- a/resources/private/authority-admin/applications-settings.html
+++ b/resources/private/authority-admin/applications-settings.html
@@ -55,6 +55,16 @@
         </table>
       </section>
 
+      <section>
+        <h2 data-bind="ltext: 'authorityAdmin.archive.heading'"></h2>
+        <div class="permanent-archive-date-input">
+          <label for="archiving-start-date" data-bind="ltext: 'authorityAdmin.archive.startDate'"></label>
+          <input data-bind="datepicker: organization.permanentArchiveInUseSince, valueUpdate: 'afterkeydown', attr: {placeholder: loc('choose')}"
+                 type="text"
+                 id="archiving-start-date">
+        </div>
+      </section>
+
     </div> <!-- container -->
   </section>
 </body>
