--- a/resources/private/authority-admin/applications-settings.html
+++ b/resources/private/authority-admin/applications-settings.html
@@ -55,6 +55,7 @@
         </table>
       </section>
 
+      <!-- ko if: $root.authorization.ok("set-organization-permanent-archive-start-date") -->
       <section>
         <h2 data-bind="ltext: 'authorityAdmin.archive.heading'"></h2>
         <div class="permanent-archive-date-input">
@@ -64,6 +65,7 @@
                  id="archiving-start-date">
         </div>
       </section>
+      <!-- /ko -->
 
     </div> <!-- container -->
   </section>
