--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -12,6 +12,9 @@
                           <h2 data-bind="if: primaryOperation">
                                 <span data-test-id="test-application-primary-operation"
                                       data-bind="ltext: primaryOperationName, attr: {'data-test-primary-operation-id': primaryOperation().name}"></span>
+                                <span data-bind="visible: permitSubtype() === 'muutoslupa',
+                                                 ltext: 'permitSubtype.muutoslupa'"
+                                      class="modification-permit"></span>
                             </h2>
 
                             <!-- State: -->
@@ -175,6 +178,9 @@
                                       <span data-bind="text: $data.id"></span>
                                       -
                                       <span data-bind="ltext: 'operations.' + $data.operation()"></span>
+                                      <span data-bind="visible: $data.permitSubtype() === 'muutoslupa',
+                                                       ltext: 'permitSubtype.muutoslupa'"
+                                            class="modification-permit"></span>
                                     </a>
                                   </span>
                                 </span>
