--- a/resources/private/attachment/attachment.html
+++ b/resources/private/attachment/attachment.html
@@ -72,6 +72,13 @@
                     <span data-bind="ltext: 'attachment.addVersion', visible: latestVersion"></span>
                     <span data-bind="ltext: 'attachment.addFile', visible: !latestVersion()"></span>
                 </button>
+                <button data-test-id="add-ram-attachment"
+                        class="positive"
+                        data-bind="click: newRamAttachment,
+                                   visible: true">
+                  <i class="lupicon-circle-plus"></i>
+                  <span data-bind="ltext: 'attachment.new-ram'"></span>
+                </button>
                 <button id="show-attachment-versions"
                         class="btn"
                         data-bind="click: toggleAttachmentVersionHistory, visible: latestVersion">
