Link icon style.

--- a/resources/private/ui-components/ram/ram-links-template.html
+++ b/resources/private/ui-components/ram/ram-links-template.html
@@ -24,7 +24,7 @@
         <td data-bind="if: id != $parent.attachmentId">
           <a data-bind="attr: {href: $parent.service.attachmentUrl( id ),
                         'data-test-id': 'ram-link-link-' + $index()}"
-             class="button primary">
+             class="link-btn primary">
             <i class="lupicon-external-link"></i>
           </a>
         </td>
