nitpicker errors noted

--- a/resources/private/authority-admin/calendar-admin.html
+++ b/resources/private/authority-admin/calendar-admin.html
@@ -23,7 +23,7 @@
     </div>
     <div class="dialog-content">
       <div data-bind="with: $root.calendars.newReservationSlotModel">
-        <p>Lisätään varattavia aikoja alkaen klo <span data-bind="text: startTime"></span></p>
+        <p>Lis&auml;t&auml;&auml;n varattavia aikoja alkaen klo <span data-bind="text: startTime"></span></p>
         <p>Tapahtumalajit:</p>
         <div data-bind="foreach: $root.reservationTypes.items">
           <p>
