--- a/resources/private/calendar-view/calendar-view.html
+++ b/resources/private/calendar-view/calendar-view.html
@@ -16,7 +16,7 @@
         <div class="month" data-bind="calendarViewMonthText: month()"></div>
         <div class="nav-links">
           <a data-bind="click: gotoPreviousWeek"><< Edellinen</a> |
-          <a data-bind="click: gotoToday">Tänään</a> |
+          <a data-bind="click: gotoToday">T&auml;n&auml;&auml;n</a> |
           <a data-bind="click: gotoFollowingWeek">Seuraava >></a>
         </div>
       </div>
